tests/baselines/reference/destructuringFromUnionSpread.errors.txt
tests/cases/compiler/destructuringFromUnionSpread.ts(5,9): error TS2525: Initializer provides no value for this binding element and the binding element has no default value.


==== tests/cases/compiler/destructuringFromUnionSpread.ts (1 errors) ====
    interface A { a: string }
    interface B { b: number }
    
    declare const x: A | B;
    const { a } = { ...x } // error
            ~
!!! error TS2525: Initializer provides no value for this binding element and the binding element has no default value.
    